--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ install:
 script:
 - pwd
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    if [[ "$TRAVIS_BRANCH" != "rc" || "$TRAVIS_BRANCH" != "master" ]]; then
+    if [[ "$TRAVIS_BRANCH" != "rc" && "$TRAVIS_BRANCH" != "master" ]]; then
       cd python;
       python setup.py test;
       cd ..;
