--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ script:
 - pwd
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     if [[ "$TRAVIS_BRANCH" != "rc" && "$TRAVIS_BRANCH" != "master" ]]; then
-      conda install --no-update-deps --yes gcc_linux-64;
+      conda install --yes gcc_linux-64;
       conda install -c conda-forge --no-update-deps --yes make valgrind;
       mkdir _build && cd _build;
       cmake .. && make spglibtest;
