--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_install:
       conda install --yes pip;
     else
       conda install --yes gcc_linux-64;
-      conda install --yes pip numpy pyyaml nomkl;
+      conda install --yes pip numpy pyyaml nomkl make cmake;
     fi
   fi
 - pwd
@@ -74,9 +74,9 @@ script:
 - pwd
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     if [[ "$TRAVIS_BRANCH" != "rc" && "$TRAVIS_BRANCH" != "master" ]]; then
-      conda install -c conda-forge --yes make valgrind;
+      conda install -c conda-forge --yes valgrind;
       mkdir _build && cd _build;
-      cmake .. && make spglibtest;
+      cmake .. && make VERBOSE=1 spglibtest;
       valgrind --leak-check=yes --error-exitcode=123 ./spglibtest;
       cd ..;
       cd python;
