--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,6 @@ before_install:
     cd ..;
     if [[ "$DOCKER_DEPLOY" != "false" ]]; then
       conda install --yes pip;
-    else
-      conda install --yes gcc_linux-64;
-      conda install --yes pip numpy pyyaml nomkl make cmake;
     fi
   fi
 - pwd
@@ -74,9 +71,13 @@ script:
 - pwd
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     if [[ "$TRAVIS_BRANCH" != "rc" && "$TRAVIS_BRANCH" != "master" ]]; then
+      conda create -n test
+      source activate test
+      conda install --yes gcc_linux-64;
+      conda install --yes pip numpy pyyaml nomkl make cmake;
       conda install -c conda-forge --yes valgrind;
       mkdir _build && cd _build;
-      cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_CC_COMPILER=$CC .. && make spglibtest;
+      cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON .. && make spglibtest;
       valgrind --leak-check=yes --error-exitcode=123 ./spglibtest;
       cd ..;
       cd python;
