--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ before_install:
     cd ..;
     if [[ "$DOCKER_DEPLOY" != "false" ]]; then
       conda install --yes pip;
+    else
+      conda install --yes pip numpy pyyaml nomkl;
     fi
   fi
 - pwd
@@ -71,8 +73,8 @@ script:
 - pwd
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     if [[ "$TRAVIS_BRANCH" != "rc" && "$TRAVIS_BRANCH" != "master" ]]; then
-      conda create -n test
-      source activate test
+      conda create -n test;
+      source activate test;
       conda install --yes gcc_linux-64;
       conda install --yes pip numpy pyyaml nomkl make cmake;
       conda install -c conda-forge --yes valgrind;
@@ -83,6 +85,7 @@ script:
       cd python;
       python setup.py test;
       cd ..;
+      source deactivate;
     fi
   fi
 
