--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,30 @@
 matrix:
   include:
-  - python: '2.7'
+  - python: '3.6'
     sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
          DOCKER_DEPLOY='manylinux1_x86_64'
-         TRAVIS_PYTHON_VERSION='2.7'
-  - python: '2.7'
+         TRAVIS_PYTHON_VERSION='3.6'
+         PLAT=manylinux1_x86_64
+  - python: '3.6'
     sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
          PRE_CMD=linux32
          DOCKER_DEPLOY='manylinux1_i686'
-         TRAVIS_PYTHON_VERSION='2.7'
+         TRAVIS_PYTHON_VERSION='3.6'
+         PLAT=manylinux1_i686
+  - python: '3.6'
+    sudo: required
+    services:
+      - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+         DOCKER_DEPLOY='manylinux2010_x86_64'
+         TRAVIS_PYTHON_VERSION='3.6'
+         PLAT=manylinux2010_x86_64
   - python: '2.7'
     sudo: false
     env: DOCKER_DEPLOY=false
@@ -60,7 +70,7 @@ install:
       docker pull $DOCKER_IMAGE;
       cd python;
       cp -a ../src .;
-      docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
+      docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
       ls wheelhouse/;
       mkdir dist;
       cp wheelhouse/spglib* dist/;
@@ -105,7 +115,7 @@ deploy:
     repo: atztogo/spglib
     branch: rc
     tags: false
-    condition: "$DOCKER_DEPLOY == manylinux1_x86_64 || $DOCKER_DEPLOY == manylinux1_i686"
+    condition: "$DOCKER_DEPLOY == manylinux1_x86_64 || $DOCKER_DEPLOY == manylinux1_i686 || $DOCKER_DEPLOY == manylinux2010_x86_64"
 
 # testing conda
 - provider: script
@@ -130,7 +140,7 @@ deploy:
     repo: atztogo/spglib
     branch: master
     tags: false
-    condition: "$DOCKER_DEPLOY == manylinux1_x86_64 || $DOCKER_DEPLOY == manylinux1_i686"
+    condition: "$DOCKER_DEPLOY == manylinux1_x86_64 || $DOCKER_DEPLOY == manylinux1_i686 || $DOCKER_DEPLOY == manylinux2010_x86_64"
 
 # production anaconda
 - provider: script
