--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ install:
       docker pull $DOCKER_IMAGE;
       cd python;
       cp -a ../src .;
-      docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
+      docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
       ls wheelhouse/;
       mkdir dist;
       cp wheelhouse/spglib* dist/;
