Spglib github repostory was moved to spglib/spglib from atztogo/spglib. These updates were made following this migration.

--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: version_from_shell
 
 source:
-  git_url: https://github.com/atztogo/spglib.git
+  git_url: https://github.com/spglib/spglib.git
   git_branch: {{ environ.get('GIT_BRANCH','master') }}
 
 build:
@@ -55,7 +55,7 @@ test:
     #- nose
 
 about:
-  home: https://atztogo.github.io/spglib/
+  home: https://spglib.github.io/spglib/
   license: BSD
   summary: 'Space symmetry groups spglib module.'
 
