--- a/rust/spglib-sys/Cargo.toml
+++ b/rust/spglib-sys/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
 edition = "2018"
 license = "BSD-3-Clause"
 description = "Raw bindings to spglib"
-repository = "https://github.com/atztogo/spglib"
+repository = "https://github.com/spglib/spglib"
 categories = ["external-ffi-bindings", "science"]
 
 [lib]
