--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ matrix:
   - python: '3.6'
     env: DOCKER_DEPLOY=false
          TRAVIS_PYTHON_VERSION='3.6'
+  - python: '3.7'
+    env: DOCKER_DEPLOY=false
+         TRAVIS_PYTHON_VERSION='3.7'
 
 before_install:
 - echo $DOCKER_DEPLOY
