Updated build-wheels.sh and travis.yml to deploy wheels

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,7 @@ install:
       ls wheelhouse/;
       mkdir dist;
       cp wheelhouse/spglib* dist/;
+      pwd;
       ls dist/;
       cd ..;
     fi;
