Made numpy>=1.11 in meta.yaml to avoid fixing the version at 1.11 in conda build

--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -26,11 +26,11 @@ build:
 requirements:
   build:
     - python
-    - numpy
+    - numpy>=1.11
 
   run:
     - python
-    - numpy
+    - numpy>=1.11
     - pyyaml
 
 test:
