Fix std_positions in fortran wrapper

--- a/example/Makefile_f08
+++ b/example/Makefile_f08
@@ -1,7 +1,7 @@
 
 fc = gfortran -g -fcheck=all -fbacktrace
 # fc = ifort -g -check all -traceback
-lib = ../src/.libs/libsymspg.a
+lib = ../build/lib/libsymspg.a
 
 test: example
 	./example
