--- a/.github/workflows/pypi-wheels.yml
+++ b/.github/workflows/pypi-wheels.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - rc
-      - rctest
+      - master
 
 jobs:
   build-wheel:
@@ -71,4 +71,10 @@ jobs:
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
-          packages_dir: ./dist
+
+      - name: Publish package to PyPI
+        if: startsWith(github.ref, 'refs/heads/master')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
