--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda install --yes -c conda-forge python=3.8
-        conda install --yes -c conda-forge numpy compilers pip pytest codecov pytest-cov
+        conda install --yes -c conda-forge numpy gcc_linux-64 pip pytest codecov pytest-cov pyyaml
     - name: Setup spglib
       working-directory: ./python
       run: |
@@ -38,7 +38,6 @@ jobs:
       run: |
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
-      working-directory: ./python
       uses: codecov/codecov-action@v1
       with:
         verbose: true
