enable fortran in cmake and add pkgconfig files for both fortran and C libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@
 cmake_minimum_required(VERSION 2.8.12)
 
 project(spglib C)
+
+option(WITH_Fortran "enable f08 interface" OFF)
+
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
 set(CMAKE_C_FLAGS_DEBUG "-g -DSPGDEBUG -DSPGWARNING")
@@ -92,7 +95,7 @@ add_test(spglibtest spglibtest)
 # make check
 
 # cf. https://stackoverflow.com/questions/5709914/using-cmake-how-do-i-get-verbose-output-from-ctest
-add_custom_target(check 
+add_custom_target(check
         ${CMAKE_COMMAND} -E echo CWD=${CMAKE_BINARY_DIR}
         COMMAND ${CMAKE_COMMAND} -E echo CMD=${CMAKE_CTEST_COMMAND} -C $<CONFIG>
         COMMAND ${CMAKE_COMMAND} -E echo ----------------------------------
@@ -101,4 +104,15 @@ add_custom_target(check
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
     DEPENDS spglibtest
     )
+
+if (WITH_Fortran)
+  enable_language(Fortran)
+  add_subdirectory(fortran)
+endif()
+
+configure_file(spglib.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/spglib.pc)
+install(
+  FILES  ${CMAKE_CURRENT_BINARY_DIR}/spglib.pc
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig
+  COMPONENT pkgconfig)
 
