--- a/.github/workflows/pypi-wheels.yml
+++ b/.github/workflows/pypi-wheels.yml
@@ -34,36 +34,36 @@ jobs:
         if: matrix.platform == 'manylinux1_x86_64'
         uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux1_x86_64
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: Build manylinux Python wheels manylinux1_i686
         if: matrix.platform == 'manylinux1_i686'
         uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux1_i686
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: Build manylinux Python wheels manylinux2014_x86_64
         if: matrix.platform == 'manylinux2014_x86_64'
         uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_x86_64
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: Build manylinux Python wheels manylinux2014_aarch64
         if: matrix.platform == 'manylinux2014_aarch64'
         uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch64
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
 
       - name: copy manylinux wheels
         run: |
-          mkdir dist
+          pip install numpy
+          python setup.py sdist
           cp ./python/dist/*manylinux*whl dist
-          cp ./python/dist/*.tar.gz dist
 
       - name: Publish package to TestPyPI
         if: startsWith(github.ref, 'refs/heads/rc')
