--- a/.github/workflows/pypi-wheels.yml
+++ b/.github/workflows/pypi-wheels.yml
@@ -34,20 +34,23 @@ jobs:
           cd ..
       - name: Build manylinux Python wheels manylinux2014_x86_64
         if: matrix.platform == 'manylinux2014_x86_64'
-        uses: RalfG/python-wheels-manylinux-build@v0.4.0-manylinux2014_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_x86_64
         with:
+          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: Build manylinux Python wheels manylinux2014_aarch64
         if: matrix.platform == 'manylinux2014_aarch64'
-        uses: RalfG/python-wheels-manylinux-build@v0.4.0-manylinux2014_aarch64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_aarch64
         with:
+          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: Build manylinux Python wheels manylinux2010_x86_64
         if: matrix.platform == 'manylinux2010_x86_64'
-        uses: RalfG/python-wheels-manylinux-build@v0.4.0-manylinux2010_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2010_x86_64
         with:
+          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
           pre-build-command: 'sh pre-build-script.sh'
           package-path: ./python
       - name: mkdir
