--- a/.github/workflows/pypi-wheels.yml
+++ b/.github/workflows/pypi-wheels.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        if: matrix.platform == 'manylinux2014_aarch64'
+        uses: docker/setup-qemu-action@v1
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
