--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ set(SOURCES ${PROJECT_SOURCE_DIR}/src/arithmetic.c
             ${PROJECT_SOURCE_DIR}/src/kgrid.c
             ${PROJECT_SOURCE_DIR}/src/kpoint.c
             ${PROJECT_SOURCE_DIR}/src/mathfunc.c
+            ${PROJECT_SOURCE_DIR}/src/msg_database.c
             ${PROJECT_SOURCE_DIR}/src/niggli.c
             ${PROJECT_SOURCE_DIR}/src/overlap.c
             ${PROJECT_SOURCE_DIR}/src/pointgroup.c
