--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -43,3 +43,30 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         verbose: true
+
+  c-test-linux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9"]
+      fail-fast: true
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+    - name: Install dependencies
+      run: |
+        conda install --yes -c conda-forge python=${{ matrix.python-version }}
+        conda install --yes -c conda-forge gcc_linux-64 make cmake
+    # Require CMake>=3.14 for the following build procedure
+    - name: Test
+      run: |
+        cmake -S . -B build -DUSE_SANITIZER="Address" -DCMAKE_BUILD_TYPE="Debug"
+        cmake --build build -t check
