--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -70,3 +70,33 @@ jobs:
       run: |
         cmake -S . -B build -DUSE_SANITIZER="Address" -DCMAKE_BUILD_TYPE="Debug"
         cmake --build build -t check
+
+  docs:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get install -y pandoc
+
+    - name: Install
+      run: |
+        python -m pip install -r doc/requirements.txt
+
+    - name: Build
+      run: |
+        sphinx-build doc docs_build
+
+    - name: Deploy docs at develop branch
+      if: ${{ github.ref == 'refs/heads/develop' }}
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./docs_build
+        destination_dir: develop
