--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ default_language_version:
 fail_fast: false
 repos:
 - repo: https://github.com/pocc/pre-commit-hooks
-  rev: master
+  rev: v1.3.5
   hooks:
   - id: clang-format
     args: ["-i", "--style=file"]  # Use style set in .clang-format
@@ -27,9 +27,40 @@ repos:
   #   files: ^src/
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.2.0
+  rev: v4.3.0
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
   - id: check-yaml
   - id: check-added-large-files
+
+- repo: https://github.com/pycqa/flake8
+  rev: 5.0.4
+  hooks:
+  - id: flake8
+    files: python/
+    args:
+    - "--max-line-length=88"
+    - "--ignore=E203,W503"
+
+- repo: https://github.com/psf/black
+  rev: 22.6.0
+  hooks:
+  - id: black
+    files: python/
+    args:
+    - --line-length=88
+
+- repo: https://github.com/pycqa/pydocstyle
+  rev: 6.1.1
+  hooks:
+  - id: pydocstyle
+    files: python/spglib
+    additional_dependencies: ["toml"]
+
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+    - id: isort
+      files: python/
+      args: ["--profile", "black"]
