--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -85,9 +85,20 @@ jobs:
       run: |
         sudo apt-get install -y pandoc
 
-    - name: Install
+    - name: Add conda to system path
       run: |
-        python -m pip install -r doc/requirements.txt
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+
+    - name: Install dependencies
+      run: |
+        conda install --yes -c conda-forge python=3.9
+        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml
+
+    - name: Setup spglib with doc's dependencies
+      working-directory: ./python
+      run: |
+        python -m pip install -e .[doc]
 
     - name: Build
       run: |
