Install spglib pkgconfig into LIBDIR
The pkgconfig file is architecture specific, so it needs
to be installed into libdir/pkgconfig. On Red Hat/SUSE
like distributions libdir is actually $prefix/lib64 on
64bit platforms.

Signed-off-by: Dirk Müller <dirk@dmllr.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,5 +132,5 @@ endif()
 configure_file(spglib.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/spglib.pc)
 install(
   FILES  ${CMAKE_CURRENT_BINARY_DIR}/spglib.pc
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig
+  DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig
   COMPONENT pkgconfig)
