--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,4 +2,6 @@
 requires = ["setuptools", "wheel", "numpy"]
 
 [tool.cibuildwheel]
-skip = ["pp*", "*-win32", "*-manylinux_i686"]
+skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
+manylinux-x86_64-image = "manylinux2014"
+manylinux-aarch64-image = "manylinux2014"
