--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install dependencies
       run: |
         conda install --yes -c conda-forge python=3.9
-        conda install --yes -c conda-forge numpy gcc_linux-64 pip pytest codecov pytest-cov pyyaml
+        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml
     - name: Setup spglib
       working-directory: ./python
       run: |
         ./get_nanoversion.sh
         cat __nanoversion__.txt
         python setup.py build
-        pip install -e .
+        pip install -e .[testing]
     - name: Test with pytest
       working-directory: ./python
       run: |
