Define project version in cmake
Signed-off-by: Cristian Le <cristian.le@mpsd.mog.de>
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/src/version.h.in
+++ b/src/version.h.in
@@ -35,8 +35,8 @@
 #ifndef __version_H__
 #define __version_H__
 
-#define SPGLIB_MAJOR_VERSION 2
-#define SPGLIB_MINOR_VERSION 0
-#define SPGLIB_MICRO_VERSION 2
+#define SPGLIB_MAJOR_VERSION @spglib_VERSION_MAJOR@
+#define SPGLIB_MINOR_VERSION @spglib_VERSION_MINOR@
+#define SPGLIB_MICRO_VERSION @spglib_VERSION_PATCH@
 
 #endif
