--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(CTests
 		test_error.cpp
+    test_symmetry.cpp
 		test_symmetry_search.cpp
 		test_spacegroup_type_search.cpp
 		test_find_primitive_cell.cpp
