--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,64 +1,26 @@
-cmake_minimum_required(VERSION 3.11)
-
-project(test_spglib CXX C)
+enable_language(CXX)
+enable_testing()
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_MACOSX_RPATH 1)
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
-endif()
-if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-  add_definitions(-DSPGDEBUG -DSPGWARNING)
-endif()
+find_package(GTest)
+if(NOT GTest_FOUND)
+	# pthread (required for GoogleTest)
+	# https://stackoverflow.com/questions/1620918/cmake-and-libpthread
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+	find_package(Threads REQUIRED)
 
-# Sanitizers
-if (USE_SANITIZER STREQUAL "Address")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
-elseif (USE_SANITIZER STREQUAL "Thread")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=thread")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
-elseif (USE_SANITIZER STREQUAL "Undefined")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=undefined")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
-elseif (USE_SANITIZER STREQUAL "Leak")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=leak")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak")
-elseif (USE_SANITIZER STREQUAL "Memory")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=memory")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=memory")
+	# Fetch GoogleTest
+	include(FetchContent)
+	FetchContent_Declare(
+			googletest
+			URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz
+			URL_HASH MD5=e82199374acdfda3f425331028eb4e2a
+	)
+	FetchContent_MakeAvailable(googletest)
 endif()
 
-# OpenMP
-if (USE_OMP)
-  find_package(OpenMP REQUIRED)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-endif()
-
-# pthread (required for GoogleTest)
-# https://stackoverflow.com/questions/1620918/cmake-and-libpthread
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-
-# Include src/spglib.h and test/utils.h
-include_directories("${PROJECT_SOURCE_DIR}/../src" "${PROJECT_SOURCE_DIR}")
-
-# Static library
-file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/../src/*.c)
-add_library(symspg STATIC ${SOURCES})
-
-# Fetch GoogleTest
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
-)
-FetchContent_MakeAvailable(googletest)
-include(GoogleTest)
-
-enable_testing()
 foreach(TESTCASE IN ITEMS
         test_error
         test_symmetry_search
@@ -71,6 +33,8 @@ foreach(TESTCASE IN ITEMS
         test_kpoints
         )
   add_executable(${TESTCASE} ${TESTCASE}.cpp utils.c)
-  target_link_libraries(${TESTCASE} PUBLIC symspg gtest_main PRIVATE Threads::Threads)
+  target_link_libraries(${TESTCASE}
+		  PUBLIC symspg
+		  PRIVATE GTest::gtest GTest::gtest_main)
   gtest_discover_tests(${TESTCASE})
 endforeach()
