--- a/.github/workflows/pypi-wheel-builds.yml
+++ b/.github/workflows/pypi-wheel-builds.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build sdist
         run: |
-          pip install numpy
+          pip install numpy make cmake scikit-build
           cd python
           sh pre-build-script.sh
           python setup.py sdist
