--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda install --yes -c conda-forge python=3.9
-        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml
+        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml make cmake scikit-build
     - name: Setup spglib
       working-directory: ./python
       run: |
@@ -95,7 +95,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda install --yes -c conda-forge python=3.9
-        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml
+        conda install --yes -c conda-forge numpy gcc_linux-64 pip pyyaml make cmake scikit-build
 
     - name: Setup spglib with doc's dependencies
       working-directory: ./python
